[workspace]
resolver = "2"

members = [
    "modules/axalloc",
    "modules/axconfig",
    # "modules/axdisplay",
    # "modules/axnet",
    "modules/axdriver",
    "modules/axfs",
    "modules/axhal",
    "modules/axlog",
    "modules/axmm",
    "modules/axdma",
    "modules/axruntime",
    "modules/axsync",
    "modules/axtask",

    "api/axfeat",
    "api/arceos_api",

    "ulib/axstd",

    "shell",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Yunming Hu <hugonelsonm3@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
repository = "https://github.com/HugoPhi/unikernel"
homepage = "none"
keywords = ["unikernel", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
axstd = { path = "ulib/axstd" }

arceos_api = { path = "api/arceos_api" }
axfeat = { path = "api/axfeat" }

axalloc = { path = "modules/axalloc" }
axconfig = { path = "modules/axconfig" }
# axdisplay = { path = "modules/axdisplay" }
# axnet = { path = "modules/axnet" }
axdriver = { path = "modules/axdriver" }
axfs = { path = "modules/axfs" }
axhal = { path = "modules/axhal" }
axlog = { path = "modules/axlog" }
axmm = { path = "modules/axmm" }
axsync = { path = "modules/axsync" }
axruntime = { path = "modules/axruntime" }
axtask = { path = "modules/axtask" }
axdma = { path = "modules/axdma" }

[profile.release]
lto = true
